syntax = "proto3";
package poolmanager.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/bitbadges/bitbadgeschain/x/poolmanager/types";

message SwapAmountInRoute {
  uint64 pool_id = 1 [ (gogoproto.moretags) = "yaml:\"pool_id\"" ];
  string token_out_denom = 2
      [ (gogoproto.moretags) = "yaml:\"token_out_denom\"" ];
}

message SwapAmountOutRoute {
  uint64 pool_id = 1 [ (gogoproto.moretags) = "yaml:\"pool_id\"" ];
  string token_in_denom = 2
      [ (gogoproto.moretags) = "yaml:\"token_in_denom\"" ];
}

message SwapAmountInSplitRoute {
  repeated SwapAmountInRoute pools = 1
      [ (gogoproto.moretags) = "yaml:\"pools\"", (gogoproto.nullable) = false ];
  string token_in_amount = 2 [

    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.moretags) = "yaml:\"token_in_amount\"",
    (gogoproto.nullable) = false
  ];
}

message SwapAmountOutSplitRoute {
  repeated SwapAmountOutRoute pools = 1
      [ (gogoproto.moretags) = "yaml:\"pools\"", (gogoproto.nullable) = false ];
  string token_out_amount = 2 [

    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.moretags) = "yaml:\"token_out_amount\"",
    (gogoproto.nullable) = false
  ];
}

// ===================== Affiliate
// Affiliate represents an affiliate fee recipient
message Affiliate {
  // basis_points_fee is the fee in basis points (1/10000, e.g., 100 = 1%)
  string basis_points_fee = 1 [ (gogoproto.moretags) = "yaml:\"basis_points_fee\"" ];
  // address is the affiliate recipient address
  string address = 2 [ (gogoproto.moretags) = "yaml:\"address\"" ];
}
